--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-.gradle
+.gradle/
 /build/
 *.class
 .idea/
@@ -102,7 +102,6 @@ fabric.properties
 
 ### Java ###
 # Compiled class file
-*.class
 
 # Log file
 *.log
@@ -126,3 +125,5 @@ fabric.properties
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/java,intellij
+/.gradle/
+/.gradle/6.1/
